--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,12 +14,6 @@
       </h1>
       <p>This prototype is a way of exploring ideas and is subject to change.</p>
 
-      <br><br>
-      <h2 class="govuk-heading-m">
-        11/12/20
-      </h2>
-      <p><a href="v1">version 1</a></p>
-      <br><br>
 
       <h2 class="govuk-heading-m">
         Change log
@@ -36,7 +30,7 @@
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">18/01/21</td>
-            <td class="govuk-table__cell">Split out 'primary' and 'secondary' on education stage question; added 'help with scoring' column to 'check your answers' pages</td>
+            <td class="govuk-table__cell">Split out 'primary' and 'secondary' on education stage question; added 'help with scoring' column to 'check your answers' pages; reworked Recommendations section; added save/resume UI</td>
             <td class="govuk-table__cell"><a href="v2">Version 2</a></td>
           </tr>
         </tbody>
