--- a/app/views/v2/index.html
+++ b/app/views/v2/index.html
@@ -18,17 +18,31 @@ Review your remote education provision
       {% if serviceName %} {{ serviceName }} {% endif %}
     </h1>
 
-    <p>This service has been produced to support schools and colleges in England to identify the strengths and areas for improvement in their remote education provision. It provides links to guidance and resources to help you improve your provision.</p>
+    <p>This service has been provided to help schools and colleges in their remote education provision.</p>
 
-    <p>Use this service to:</p>
+    <p>You can use this service to:</p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li>review and improve your school or college's remote education provision</li>
-      <li>understand how to meet basic requirements using the resources and tools you currently have</li>
+      <li>identify strengths and possible areas for improvement in your remote education provision</li>
+      <li>get recommendations (including links to guidance and resources) to help improve your provision if necessary</li>
       <li>support detailed discussions on appropriate next steps</li>
     </ul>
 
-    <br>
+    <p>You can use this service if you are a:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>MAT leader</li>
+      <li>schools leader</li>
+      <li>governor in England</li>
+      <li>FE provider (including colleges, sixth form providers and independent training providers)</li>
+    </ul>
+
+    <div class="govuk-inset-text">
+      <p>The answers you provide as part of your review are for the benefit of your school or college only. The review is not a compliance or accountability tool. It is not statutory, and your school or college can use it to meet their own needs.</p>
+      <p>The Department for Education (DfE) will not collect any data that can identify your school or college.</p>
+    </div>
+
+
+    <p><a href="v2/resume-progress">Continue an existing review</a></p>
 
     <a href="v2/sector" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
       Start now
@@ -38,17 +52,6 @@ Review your remote education provision
     </a>
 
 
-<h2 class="govuk-heading-m">
-Before you start
-</h2>
-
-<p>This framework is for:</p>
-<ul class="govuk-list govuk-list--bullet">
-  <li>MAT leaders</li>
-  <li>schools leaders</li>
-  <li>governors</li>
-  <li>senior leaders in FE providers (including colleges, sixth from providers and independent training providers)</li>
-</ul>
 
 
   </div>
