--- a/app/views/v2/schools/scoring_aside.html
+++ b/app/views/v2/schools/scoring_aside.html
@@ -1,3 +1,7 @@
+<!-- <p><a href="save-progress">
+  <strong>Save your progress</strong>
+</a></p> -->
+
 <aside class="app-related-items" role="complementary">
   <h2 class="govuk-heading-s" id="subsection-title">
     Help with scoring
