--- a/app/views/v2/schools/curriculum-answers.html
+++ b/app/views/v2/schools/curriculum-answers.html
@@ -77,7 +77,7 @@ Question page
       </div>
     </dl>
 
-    <p>Once you're happy with your scores, you can get recommendations on how to improve your remote education provision.</p>
+    <p>Once you’ve been through the questions and are satisfied with your answers, you can view the guidance that will help you with your remote education provision.</p>
     <br>
 
     <form action="recommendations-single-section" method="post" novalidate>
