--- a/app/views/v2/schools/recommendations-single-section.html
+++ b/app/views/v2/schools/recommendations-single-section.html
@@ -18,10 +18,10 @@ Scores and recommendations
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Your recommendations</h1>
     <p>Based on the scores you have given so far, you could consider the following recommendations to improve your remote education provision.</p>
-    <p>
+    <!-- <p>
       <a href="task-list">
         Return to category overview</a>
-    </p>
+    </p> -->
     <br>
   </div>
 
@@ -70,7 +70,9 @@ Scores and recommendations
 
 
     <a class="govuk-button push-right" href="task-list">Continue</a>
-
+    <a class="govuk-button govuk-button--secondary push-right" href="save-progress">
+      Save your progress
+    </a>
 
   </div>
 
