--- a/app/views/v2/schools/recommendations.html
+++ b/app/views/v2/schools/recommendations.html
@@ -21,9 +21,9 @@ Scores and recommendations
 
     <p>Based on the scores you have given so far, you could consider the following recommendations to improve your remote education provision.</p>
 
-    <p>
+    <!-- <p>
       <a href="task-list">
-        Return to category overview</a></p>
+        Return to category overview</a></p> -->
 
   </div>
 
@@ -376,8 +376,13 @@ Scores and recommendations
 
     </div>
 
-    <a class="govuk-button push-right" href="task-list">Continue</a>
 
+    <a class="govuk-button push-right" href="task-list">
+      Continue
+    </a>
+    <a class="govuk-button govuk-button--secondary push-right" href="save-progress">
+      Save your progress
+    </a>
 
   </div>
 
