--- a/app/views/v2/index.html
+++ b/app/views/v2/index.html
@@ -42,9 +42,9 @@ Review your remote education provision
     </div>
 
 
-    <p><a href="v2/resume-progress">Continue an existing review</a></p>
+    <!-- <p><a href="v2/resume-progress">Continue an existing review</a></p> -->
 
-    <a href="v2/sector" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
+    <a href="v2/progress" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
       Start now
       <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
