--- a/app/views/v2/schools/task-list.html
+++ b/app/views/v2/schools/task-list.html
@@ -16,23 +16,18 @@ Task list
       Review your remote education provision
     </h1>
 
-    <p>The categories below provide a structure to identify the current position of your remote education provision. You can work through the entire framework to identify strengths and areas for improvement with your senior leadership team or focus on specific sections that have been previously identified as priorities.</p>
-    <p>The framework is not intended as a compliance or accountability tool. It is not statutory, and schools and colleges can adapt it to fit their context. The framework differs from the <a href="https://www.gov.uk/government/publications/providing-remote-education-information-to-parents-template">remote education template</a>, which is a high-level summary of remote education provision for parents, carers and pupils.</p>
+    <p>Work through the categories to assess your remote education provision. Recommendations will be suggested after each category to help improve your provision.</p>
+    <p>You can save and continue your progress, please view the link at the top of the page.</p>
 
-    {%
-      if data['leadership_monitoring-and-evaluating'] or data['recpe_pdsl']
-    %}
-    <form action="recommendations" method="post" novalidate>
-
-      <button type="submit" class="govuk-button" data-module="govuk-button">
-        View your recommendations
-      </button>
-
-      <input type="hidden" name="referrer" value="task-list">
-
-    </form>
-    {% endif %}
-
+    <p>
+      <a href="recommendations" class="govuk-button">
+        View all recommendations
+      </a>
+      &nbsp;
+      <a class="govuk-button govuk-button--secondary" href="save-progress">
+        Save your progress
+      </a>
+    </p>
 
 
     <ul class="app-task-list__items rerf">
@@ -108,7 +103,7 @@ Task list
         <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="leadership-status">Not started</strong>
         {% endif %}
         <br>
-        <p>The school maintains strong communication with pupils, parents and carers, and continues to work effectively with other third parties.</p>
+        <p>Establish strong communication with pupils, parents and carers, which continues to work effectively with other third parties.</p>
       </li>
 
       <li class="app-task-list__item">
