--- a/app/views/v2/progress.html
+++ b/app/views/v2/progress.html
@@ -37,7 +37,7 @@
                   <label class="govuk-label" for="contact-by-email">
                     If you have a reference code for an existing review, enter it here
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false"></div>
+                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" spellcheck="false"></div>
 
               </div>
               <div class="govuk-radios__item">
