--- a/app/views/v2/schools/optional.html
+++ b/app/views/v2/schools/optional.html
@@ -15,12 +15,12 @@ Optional information
 
 
     <h1 class="govuk-heading-xl">
-      Optional information
+      About you
     </h1>
 
 
-  <p>Framing text</p>
-  <p><a href="task-list">Skip to review</a></p>
+  <p>In order for you to get the right additional support, listed below are some optional questions that will help tailor the recommendations to meet your specific needs.</p>
+  <p>If you don't want to complete them you can <a href="task-list">skip to your review framework</a></p>
   <br>
 
 
