--- a/app/views/v2/schools/recommendations-single-section.html
+++ b/app/views/v2/schools/recommendations-single-section.html
@@ -35,7 +35,7 @@ Scores and recommendations
 
     <hr><br>
 
-    <h3 class="govuk-heading-m">Heading for important recommendations</h3>
+    <h3 class="govuk-heading-m">Recommended guidance based on your scores</h3>
 
     <div class="statement-block attention">
       <h3 class="govuk-heading-s">You scored 2 for remote education plan:</h3>
@@ -55,7 +55,7 @@ Scores and recommendations
 
     <hr><br>
 
-    <h3 class="govuk-heading-m">Heading for further reading</h3>
+    <h3 class="govuk-heading-m">Additional guidance</h3>
 
 
     <div class="statement-block">
@@ -70,9 +70,7 @@ Scores and recommendations
 
 
     <a class="govuk-button push-right" href="task-list">Continue</a>
-    <a class="govuk-button govuk-button--secondary push-right" href="save-progress">
-      Save your progress
-    </a>
+
 
   </div>
 
