--- a/app/views/v2/schools/recommendations.html
+++ b/app/views/v2/schools/recommendations.html
@@ -45,7 +45,7 @@ Scores and recommendations
         </div>
         <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
 
-          <h3 class="govuk-heading-m">Heading for important recommendations</h3>
+          <h3 class="govuk-heading-m">Recommended guidance based on your scores</h3>
 
           <div class="statement-block attention">
             <h3 class="govuk-heading-s">You scored 2 for remote education plan:</h3>
@@ -64,8 +64,7 @@ Scores and recommendations
           </div>
 
 
-
-          <h3 class="govuk-heading-m">Heading for further reading</h3>
+          <h3 class="govuk-heading-m">Additional guidance</h3>
 
 
           <div class="statement-block">
@@ -380,9 +379,7 @@ Scores and recommendations
     <a class="govuk-button push-right" href="task-list">
       Continue
     </a>
-    <a class="govuk-button govuk-button--secondary push-right" href="save-progress">
-      Save your progress
-    </a>
+
 
   </div>
 
