--- a/app/views/v2/schools/save-progress.html
+++ b/app/views/v2/schools/save-progress.html
@@ -13,27 +13,30 @@ Save progress
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <h1 class="govuk-heading-xl">
+      Save your progress
+    </h1>
+
     <div class="govuk-panel govuk-panel--confirmation">
-      <h1 class="govuk-panel__title">
+      <!-- <h1 class="govuk-panel__title">
         Save your progress
-      </h1>
+      </h1> -->
       <div class="govuk-panel__body">
-        Your reference number<br><strong>HDJ2123F</strong>
+        Your reference code<br><strong>HDJ2123F</strong>
       </div>
     </div>
     <br>
 
-    <p>If you want to save your framework and return to your recommendations at a later stage then make a note of this code.</p>
+    <p>There are 2 options for you to save your recommendations, if you want to save your framework and return at a later stage.</p>
 
-    <p>When you next return to the service, you’ll be asked to enter your unique code which will take you to your saved recommendations.</p>
+    <ol class="govuk-list govuk-list--number">
+      <li><p>You can make a note of this unique code. You only need to create your code once.</p>
+        <p>When you next return to the service, you'll be asked to enter your unique code which will take you to your saved recommendations.</p>
+      </li>
+      <li><p>Alternatively, you can opt for DfE to send you your unique web address with your saved recommendations and bookmark the link in your preferred browser.</p></li>
+    </ol>
 
-    <p>Alternatively, you can email yourself the unique web address with your saved recommendations and bookmark the link in your preferred browser. This option will also allow you to revisit what you’ve completed so far.</p>
-
-    <div class="govuk-inset-text">
-        Whichever option you choose, you will only have to complete it once.
-    </div>
-
-
+    <br>
 
     <form action="recommendations" method="post" novalidate>
       <div class="govuk-form-group">
@@ -49,6 +52,10 @@ Save progress
         Send
       </button>
     </form>
+
+    <div class="govuk-inset-text">
+        Whichever option you choose, you will only have to complete it once.
+    </div>
 
     <p>The Department for Education will not hold any personal data. Read our <a href="#">privacy policy</a>.
 
