--- a/app/views/v2/schools/task-list.html
+++ b/app/views/v2/schools/task-list.html
@@ -17,7 +17,7 @@ Task list
     </h1>
 
     <p>Work through the categories to assess your remote education provision. Recommendations will be suggested after each category to help improve your provision.</p>
-    <p>You can save and continue your progress, please view the link at the top of the page.</p>
+    <p>You can save your progress and revisit the service at any time.  Your recommendations will be saved.</p>
 
     <p>
       <a href="recommendations" class="govuk-button">
