--- a/app/views/v2/index.html
+++ b/app/views/v2/index.html
@@ -42,7 +42,7 @@ Review your remote education provision
     </div>
 
 
-    <!-- <p><a href="v2/resume-progress">Continue an existing review</a></p> -->
+    <p><a href="v2/resume-progress">Continue an existing review</a></p>
 
     <a href="v2/progress" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
       Start now
