--- a/app/views/v2/progress.html
+++ b/app/views/v2/progress.html
@@ -35,7 +35,7 @@
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="contact-by-email">
-                    If you have a reference code for an existing review, enter it here
+                    If you have a unique code for an existing review, enter it here, or continue to start a new review
                   </label>
                   <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" spellcheck="false"></div>
 
@@ -53,7 +53,7 @@
           </fieldset>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+        <button class="govuk-button" data-module="govuk-button">Continue</button>
 
       </form>
 
