--- a/app/views/v2/schools/optional.html
+++ b/app/views/v2/schools/optional.html
@@ -19,7 +19,7 @@ Optional information
     </h1>
 
 
-  <p>In order for you to get the right additional support, listed below are some optional questions that will help tailor the recommendations to meet your specific needs.</p>
+  <p>In order for you to get the right additional support, here are some optional questions that will help tailor the recommendations to meet your specific needs.</p>
   <p>If you don't want to complete them you can <a href="task-list">skip to your review framework</a></p>
   <br>
 
