--- a/app/views/v2/schools/save-progress.html
+++ b/app/views/v2/schools/save-progress.html
@@ -22,7 +22,7 @@ Save progress
         Save your progress
       </h1> -->
       <div class="govuk-panel__body">
-        Your reference code<br><strong>HDJ2123F</strong>
+        Your unique code<br><strong>HDJ2123F</strong>
       </div>
     </div>
     <br>
