--- a/app/views/v2/schools/task-list.html
+++ b/app/views/v2/schools/task-list.html
@@ -20,11 +20,11 @@ Task list
     <p>You can save your progress and revisit the service at any time.  Your recommendations will be saved.</p>
 
     <p>
-      <a href="recommendations" class="govuk-button">
+      <a href="recommendations" class="govuk-button govuk-button--secondary">
         View all recommendations
       </a>
       &nbsp;
-      <a class="govuk-button govuk-button--secondary" href="save-progress">
+      <a class="govuk-button" href="save-progress">
         Save your progress
       </a>
     </p>
@@ -43,7 +43,7 @@ Task list
         <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="leadership-status">Not started</strong>
         {% endif %}
         <br>
-        <p>School leaders have a clear vision and approach for remote education, and maintain awareness of any issues or barriers related to effective delivery.</p>
+        <p>Create a clear vision and approach for remote education, and maintain awareness of any issues or barriers related to effective delivery.</p>
       </li>
 
       <li class="app-task-list__item">
@@ -58,7 +58,7 @@ Task list
         <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="leadership-status">Not started</strong>
         {% endif %}
         <br>
-        <p>The school understands the remote education context of pupils, and plans its provision to ensure pupils can remain engaged in education.</p>
+        <p>Understand the pupils' remote access arrangements, and plan provision to ensure pupils remain engaged in education.</p>
       </li>
 
       <li class="app-task-list__item">
@@ -73,7 +73,7 @@ Task list
         <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="leadership-status">Not started</strong>
         {% endif %}
         <br>
-        <p>The school has well-sequenced curricula that support ‘hybrid’ teaching, and has the relevant resources in place to deliver the curriculum remotely.</p>
+        <p>Build a well-sequenced curricula that supports 'hybrid' teaching, and has the relevant resources in place to deliver the curriculum remotely.</p>
       </li>
 
       <li class="app-task-list__item">
@@ -88,7 +88,7 @@ Task list
         <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="leadership-status">Not started</strong>
         {% endif %}
         <br>
-        <p>Schools support staff to deliver high-quality remote education.</p>
+        <p>Support staff to deliver high-quality remote education.</p>
       </li>
 
       <li class="app-task-list__item">
