--- a/app/views/v2/resume-progress.html
+++ b/app/views/v2/resume-progress.html
@@ -13,15 +13,15 @@ Save progress
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Resume progress</h1>
+    <h1 class="govuk-heading-xl">Continue framework</h1>
 
 
-    <p>If you have a reference number from a review you've already started, you can enter it here to continue</p>
+    <p>If you have your unique code you can enter it here and continue to your remote education framework.</p>
 
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="one-quarter">
-        Reference number
+        Unique code
       </label>
       <input class="govuk-input govuk-!-width-one-quarter" id="one-quarter" name="one-quarter" type="text">
 
