--- a/app/views/v2/resume-progress.html
+++ b/app/views/v2/resume-progress.html
@@ -13,7 +13,7 @@ Save progress
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Continue framework</h1>
+    <h1 class="govuk-heading-xl">Continue your review</h1>
 
 
     <p>If you have your unique code you can enter it here and continue to your remote education framework.</p>
