--- a/app/views/v2/resume-progress.html
+++ b/app/views/v2/resume-progress.html
@@ -16,7 +16,7 @@ Save progress
     <h1 class="govuk-heading-xl">Continue your review</h1>
 
 
-    <p>If you have your unique code you can enter it here and continue to your remote education framework.</p>
+    <p>Enter your unique code and continue to your remote education framework.</p>
 
 
     <div class="govuk-form-group">
@@ -31,6 +31,8 @@ Save progress
 
     </div>
 
+
+    <p>Don't have your unique code? - <a href="sector">Start a new review</a></p>
 
   </div>
 
