--- a/app/views/v2/resume-progress.html
+++ b/app/views/v2/resume-progress.html
@@ -32,7 +32,7 @@ Save progress
     </div>
 
 
-    <p>Don't have your unique code? - <a href="sector">Start a new review</a></p>
+    <p>Don't have your unique code? <a href="sector">Start a new review</a></p>
 
   </div>
 
