--- a/app/views/v2/schools/optional.html
+++ b/app/views/v2/schools/optional.html
@@ -66,10 +66,15 @@ Optional information
             Select a region
           </label>
           <select class="govuk-select" id="sort" name="sort">
-            <option value="published">region 1</option>
-            <option value="updated" selected>region 2</option>
-            <option value="views">region 3</option>
-            <option value="comments">region 4</option>
+            <option value="published">North East</option>
+            <option value="updated" selected>North West</option>
+            <option value="views">Yorkshire and the Humber</option>
+            <option value="comments">West Midlands</option>
+            <option value="comments">East Midlands</option>
+            <option value="comments">South East</option>
+            <option value="comments">East of England</option>
+            <option value="comments">Greater London</option>
+            <option value="comments">South West</option>
           </select>
         </div>
 
