--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,14 @@
           </tr>
         </thead>
 
+
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">28/01/21</td>
+            <td class="govuk-table__cell">&nbsp;</td>
+            <td class="govuk-table__cell"><a href="v3">Version 3</a></td>
+          </tr>
+        </tbody>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">18/01/21</td>
