various changes to v3/schools

--- a/app/views/v3/schools/recommendations.html
+++ b/app/views/v3/schools/recommendations.html
@@ -373,9 +373,11 @@ Scores and recommendations
 
     </div>
 
-
     <a class="govuk-button push-right" href="task-list">
       Continue
+    </a>
+    <a class="govuk-button govuk-button--secondary push-right" href="save-progress">
+      Save your progress
     </a>
 
 
