--- a/app/views/v3/sector.html
+++ b/app/views/v3/sector.html
@@ -37,8 +37,14 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="which-sector-3" name="which-sector" type="radio" value="fe">
+                <input class="govuk-radios__input" id="which-sector-3" name="which-sector" type="radio" value="schools">
                 <label class="govuk-label govuk-radios__label" for="which-sector-3">
+                  all-through
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="which-sector-4" name="which-sector" type="radio" value="fe">
+                <label class="govuk-label govuk-radios__label" for="which-sector-4">
                   further education
                 </label>
               </div>
