--- a/app/views/v3/schools/recommendations-single-section.html
+++ b/app/views/v3/schools/recommendations-single-section.html
@@ -68,9 +68,10 @@ Scores and recommendations
       </ul>
     </div>
 
-
     <a class="govuk-button push-right" href="task-list">Continue</a>
-
+    <a class="govuk-button govuk-button--secondary push-right" href="save-progress">
+      Save your progress
+    </a>
 
   </div>
 
