various updates, WIP

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,7 +31,7 @@
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">28/01/21</td>
-            <td class="govuk-table__cell">Removed help text from 'Check your answers' pages; Added 'all-through' option for educational stage; moved 'save your progress' button to Recommendations pages</td>
+            <td class="govuk-table__cell">Removed help text from 'Check your answers' pages; Added 'all-through' option for educational stage; moved 'save your progress' button to Recommendations pages; added confirmation page for 'save your progress'</td>
             <td class="govuk-table__cell"><a href="v3">Version 3</a></td>
           </tr>
         </tbody>
