--- a/app/views/v3/schools/task-list.html
+++ b/app/views/v3/schools/task-list.html
@@ -17,11 +17,11 @@ Task list
     </h1>
 
     <p>Work through the categories to assess your remote education provision. Recommendations will be suggested after each category to help improve your provision.</p>
-    <p>You can save your progress and revisit the service at any time.  Your recommendations will be saved.</p>
+
 
 {% if data['leadership_monitoring-and-evaluating'] %}
     <p>
-      <a href="recommendations" class="govuk-button">
+      <a href="recommendations" class="govuk-button govuk-button--secondary">
         View all recommendations
       </a>
       <!-- &nbsp;
