--- a/app/views/v3/schools/optional.html
+++ b/app/views/v3/schools/optional.html
@@ -15,12 +15,12 @@ Optional information
 
 
     <h1 class="govuk-heading-xl">
-      About you
+      Optional information
     </h1>
 
 
-  <p>In order for you to get the right additional support, here are some optional questions that will help tailor the recommendations to meet your specific needs.</p>
-  <p>If you don't want to complete them you can <a href="task-list">skip to your review framework</a></p>
+  <p>In order to identify your specific needs here are some optional questions that will help you get the right support to deliver your remote education framework.</p>
+  <p>If you don't want to complete this you can <a href="task-list">skip to your review framework</a></p>
   <br>
 
 
