--- a/app/views/v3/schools/recommendations.html
+++ b/app/views/v3/schools/recommendations.html
@@ -33,7 +33,7 @@ Scores and recommendations
 
 
     <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-      <div class="govuk-accordion__section {{'js-expanded' if data['referrer'] == 'leadership'}}">
+      <div class="govuk-accordion__section">
         <div class="govuk-accordion__section-header">
           <h2 class="govuk-accordion__section-heading">
             <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
