--- a/app/views/v3/schools/save-progress.html
+++ b/app/views/v3/schools/save-progress.html
@@ -17,28 +17,10 @@ Save progress
       Save your progress
     </h1>
 
-    <div class="govuk-panel govuk-panel--confirmation">
-      <!-- <h1 class="govuk-panel__title">
-        Save your progress
-      </h1> -->
-      <div class="govuk-panel__body">
-        Your unique code<br><strong>HDJ2123F</strong>
-      </div>
-    </div>
+    <p>brief help text about getting email with link</p>
     <br>
 
-    <p>There are 2 options for you to save your recommendations, if you want to save your framework and return at a later stage.</p>
-
-    <ol class="govuk-list govuk-list--number">
-      <li><p>You can make a note of this unique code. You only need to create your code once.</p>
-        <p>When you next return to the service, you'll be asked to enter your unique code which will take you to your saved recommendations.</p>
-      </li>
-      <li><p>Alternatively, you can opt for DfE to send you your unique web address with your saved recommendations and bookmark the link in your preferred browser.</p></li>
-    </ol>
-
-    <br>
-
-    <form action="recommendations" method="post" novalidate>
+    <form action="confirm-save" method="post" novalidate>
       <div class="govuk-form-group">
         <label class="govuk-label" for="width-20">
           Email address
@@ -53,22 +35,16 @@ Save progress
       </button>
     </form>
 
-    <div class="govuk-inset-text">
+    <!-- <div class="govuk-inset-text">
         Whichever option you choose, you will only have to complete it once.
-    </div>
+    </div> -->
 
-    <p>The Department for Education will not hold any personal data. Read our <a href="#">privacy policy</a>.
+    <p>The Department for Education will not hold any personal data. Read our <a href="#">privacy policy</a>.</p>
 
-
-    <p><a href="task-list" class="govuk-button govuk-button--secondary">Go back to task list</a></p>
-
-
+    <p><a href="task-list">Go back to your task list</a></p>
 
   </div>
 
-  <div class="govuk-grid-column-one-third">
-
-  </div>
 
 </div>
 
