--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -23,7 +23,7 @@ Review your remote education provision
     <p>You can use this service to:</p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li>identify strengths and possible areas for improvement in your remote education provision</li>
+      <li>help find your strengths and possible areas for improvement in your remote education provision</li>
       <li>get recommendations (including links to guidance and resources) to help improve your provision if necessary</li>
       <li>support detailed discussions on appropriate next steps</li>
     </ul>
