--- a/app/views/v3/schools/confirm-save.html
+++ b/app/views/v3/schools/confirm-save.html
@@ -15,26 +15,14 @@ Save progress
 
     <div class="govuk-panel govuk-panel--confirmation">
       <h1 class="govuk-panel__title">
-        Progress saved
+        Your progress has been saved
       </h1>
     </div>
     <br>
 
-    <p>There are 2 options for you to save your recommendations, if you want to save your framework and return at a later stage.</p>
+    <p>Once you receive your email you can access your recommendations page by using the unique web address.</p>
 
-    <ol class="govuk-list govuk-list--number">
-      <li><p>You can make a note of this unique code. You only need to create your code once.</p>
-        <p>When you next return to the service, you'll be asked to enter your unique code which will take you to your saved recommendations.</p>
-      </li>
-      <li><p>Alternatively, you can opt for DfE to send you your unique web address with your saved recommendations and bookmark the link in your preferred browser.</p></li>
-    </ol>
-
-
-    <!-- <div class="govuk-inset-text">
-        Whichever option you choose, you will only have to complete it once.
-    </div> -->
-
-    <p>The Department for Education will not hold any personal data. Read our <a href="#">privacy policy</a>.
+    <p>If you have finished your current session, please close this window.</p>
 
 
     <p><a href="task-list">Go back to your task list</a></p>
