--- a/app/views/v3/schools/save-progress.html
+++ b/app/views/v3/schools/save-progress.html
@@ -17,7 +17,8 @@ Save progress
       Save your progress
     </h1>
 
-    <p>brief help text about getting email with link</p>
+    <p>You can save your progress and return to your recommendations as you complete each of the categories.</p>
+    <p>In order to receive your unique web address you need to submit your email address.</p>
     <br>
 
     <form action="confirm-save" method="post" novalidate>
