Added statements to recommendations page(s)

--- a/app/views/v3/schools/confirm-save.html
+++ b/app/views/v3/schools/confirm-save.html
@@ -20,7 +20,7 @@ Save progress
     </div>
     <br>
 
-    <p>Once you receive your email you can access your recommendations page by using the unique web address.</p>
+    <p>Once you receive your email you can access your recommendations page by using the unique link.</p>
 
     <p>If you have finished your current session, please close this window.</p>
 
