--- a/app/views/v3/schools/save-progress.html
+++ b/app/views/v3/schools/save-progress.html
@@ -18,7 +18,7 @@ Save progress
     </h1>
 
     <p>You can save your progress and return to your recommendations as you complete each of the categories.</p>
-    <p>In order to receive your unique web address you need to submit your email address.</p>
+    <p>In order to receive your unique link you need to submit your email address.</p>
     <br>
 
     <form action="confirm-save" method="post" novalidate>
@@ -27,7 +27,7 @@ Save progress
           Email address
         </label>
         <div id="email-hint" class="govuk-hint">
-          We’ll only use this to send your unique web address
+          We’ll only use this to send your unique link
         </div>
         <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
       </div>
