--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -20,6 +20,11 @@ Review your remote education provision
 
     <p>This service has been provided to help schools and colleges in their remote education provision.</p>
 
+    <div class="govuk-inset-text">
+      <p>The answers you provide as part of your review are for the benefit of your school or college only.</p>
+      <p>The Department for Education (DfE) will not collect any data that can identify your school or college.</p>
+    </div>
+
     <p>You can use this service to:</p>
 
     <ul class="govuk-list govuk-list--bullet">
@@ -27,6 +32,10 @@ Review your remote education provision
       <li>get recommendations (including links to guidance and resources) to help improve your provision if necessary</li>
       <li>support detailed discussions on appropriate next steps</li>
     </ul>
+
+    <div class="govuk-inset-text">
+      <p>You can save your progress and return to the service at any time.</p>
+    </div>
 
     <p>You can use this service if you are a:</p>
     <ul class="govuk-list govuk-list--bullet">
@@ -36,10 +45,7 @@ Review your remote education provision
       <li>FE provider (including colleges, sixth form providers and independent training providers)</li>
     </ul>
 
-    <div class="govuk-inset-text">
-      <p>The answers you provide as part of your review are for the benefit of your school or college only. The review is not a compliance or accountability tool. It is not statutory, and your school or college can use it to meet their own needs.</p>
-      <p>The Department for Education (DfE) will not collect any data that can identify your school or college.</p>
-    </div>
+
 
     <a href="v3/sector" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
       Start now
